Use current pickr release; Fix overflow on small devices
Resolve tap position more accurately, take touch devices into account

--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -11,6 +11,7 @@
     padding: 0.5em;
     font-family: $font-family;
     user-select: none;
+    max-width: 100vw;
 
     * {
         box-sizing: border-box;
@@ -28,10 +29,11 @@
     .gpcr-interaction {
         @include flex(column);
         margin-left: 0.5em;
+        width: 12.5em;
         z-index: 1;
 
         .gpcr-result {
-            @include size(7.9em, 12.5em);
+            @include size(7.9em, 100%);
             @include transparency-background(8px);
             position: relative;
             border-radius: 0.15em;
@@ -108,7 +110,7 @@
             margin-bottom: 0.75em;
 
             .gpcr-stop-preview {
-                @include size(2em, 12.5em);
+                @include size(2em, 100%);
                 @include transparency-background(8px);
                 position: relative;
                 border-radius: 0.15em;
